tests/snapshots/integration__self_loop_import_extraction.snap
---
source: tests/integration.rs
assertion_line: 766
expression: imports
---
[
    (
        "src/self.ts",
        "./self",
    ),
]
