tests/snapshots/integration__side_effect_imports_detection.snap
---
source: tests/integration.rs
assertion_line: 1793
expression: cycles
---
[
    "src/main.ts → src/setup.ts → src/main.ts",
]
