tests/snapshots/integration__simple_cycle_import_extraction.snap
---
source: tests/integration.rs
assertion_line: 605
expression: imports
---
[
    (
        "src/a.ts",
        "./b",
    ),
    (
        "src/b.ts",
        "./a",
    ),
]
