tests/snapshots/integration__star_exports_detection.snap
---
source: tests/integration.rs
assertion_line: 1817
expression: cycles
---
[
    "src/a.ts → src/b.ts → src/a.ts",
]
