tests/snapshots/integration__workspace_shared_cycle_detection.snap
---
source: tests/integration.rs
assertion_line: 1419
expression: cycles
---
[
    "@shared-cycle/app -> @shared-cycle/shared -> @shared-cycle/utils -> @shared-cycle/app",
]
